--- a/manifest.json
+++ b/manifest.json
@@ -11,9 +11,10 @@
     "default_title": "Open the popup"
   },
   "content_scripts": [{
-    "matches": [
-        "<all_urls>"
-    ],
+    // "matches": [
+    //     "<all_urls>"
+    // ],
+    "matches": ["https://www.youtube.com/*"],
     "js": [
         "contents.js"
 
